--- a/app/src/main/res/layout/address_fragment.xml
+++ b/app/src/main/res/layout/address_fragment.xml
@@ -108,20 +108,7 @@
                 android:layout_height="wrap_content"
                 />
         </com.google.android.material.textfield.TextInputLayout>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="20dp"
-        android:text="Añade tu Ubicacion (Opcional)"/>
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="10dp"
-        android:id="@+id/get_location"
-        android:src="@drawable/ic_baseline_add_location_24"/>
     </LinearLayout>
 
     <FrameLayout
@@ -137,7 +124,7 @@
             android:id="@+id/save_direction"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Guardar Dirección"
+            android:text="Continuar"
             android:textColor="@color/colorPrimary"
             android:background="@color/green"
             android:fontFamily="sans-serif-medium"
