--- a/app/src/main/res/layout/item_delivery_address.xml
+++ b/app/src/main/res/layout/item_delivery_address.xml
@@ -1,70 +1,89 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical">
 
 
     <LinearLayout
+        android:id="@+id/item_delivery_address_layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/item_delivery_address_layout">
+        android:layout_height="match_parent">
+
         <LinearLayout
-            android:layout_weight="4"
-            android:layout_margin="10dp"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_width="0dp">
+            android:layout_margin="10dp"
+            android:layout_weight="4"
+            android:orientation="vertical">
+
             <TextView
                 android:id="@+id/item_delivery_address_street_number"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 tools:text="Azopardo 73" />
+
             <TextView
                 android:id="@+id/item_delivery_address_floor"
-                android:layout_marginTop="5dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
                 tools:text="Departamento: 10" />
+
             <TextView
                 android:id="@+id/item_delivery_address_district"
-                android:layout_marginTop="5dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
                 tools:text="Godoy Cruz" />
+
             <TextView
                 android:id="@+id/item_delivery_address_reference"
-                android:layout_marginTop="5dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
                 tools:text="Referencia: La unica casa en toda la calle" />
         </LinearLayout>
+
         <FrameLayout
             android:id="@+id/frame_arrow"
             android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:layout_weight="1">
+
             <ImageView
-                android:layout_gravity="center|right"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_baseline_arrow_forward_ios_24"/>
+                android:layout_gravity="center|right"
+                android:src="@drawable/ic_baseline_arrow_forward_ios_24" />
         </FrameLayout>
     </LinearLayout>
 
-    <ImageView
-        android:id="@+id/item_delivery_address_delete"
-        android:layout_margin="10dp"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="right"
-        android:src="@drawable/ic_baseline_delete_24"
-        />
+        android:layout_gravity="right">
+
+        <ImageView
+            android:id="@+id/item_delivery_address_delete"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            android:layout_margin="10dp"
+            android:src="@drawable/ic_baseline_delete_24" />
+
+        <ImageView
+            android:id="@+id/item_delivery_address_edit"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            android:layout_margin="10dp"
+            android:src="@drawable/ic_baseline_edit_24" />
+    </LinearLayout>
 
     <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@color/grey"/>
-    </LinearLayout>
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/grey" />
+</LinearLayout>
